@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/11/26 v142 : </lime>
+</p><br/>
+<p>
+    1. 自动隐藏和自动渐隐系统可以合用，同时使用时，符合自动隐藏的条件时，启用自动渐隐效果，不再使用自动隐藏。
+</p>
+<p>
+    2. 宏条件编辑器添加了部分目标，用于判别boss战，竞技场等等。
+</p>
+<br/><br/>
+<p>
 <lime>2016/11/26 v140 : </lime>
 </p><br/>
 <p>
