@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/11/26 v142 : </lime>
+</p><br/>
+<p>
+    1. 自動隱藏和自動漸隱系統可以合用，同時使用時，符合自動隱藏的條件時，啟用自動漸隱效果，不再使用自動隱藏。
+</p>
+<p>
+    2. 宏條件編輯器添加了部分目標，用於判別boss戰，競技場等等。
+</p>
+<br/><br/>
+<p>
 <lime>2016/11/26 v140 : </lime>
 </p><br/>
 <p>
